Fix spacing between sections on mobile

--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+html {
+  line-height: 1.4;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+p, img, ol, ul {
+  margin-bottom: 1.2em;
+}
 .container {
   width: calc(14rem * 3 + 5.5rem * 4);
   margin: auto;
@@ -107,9 +114,12 @@ header .logo {
   .container { width: auto; min-width: 20rem; }
   header, nav, footer { text-align: center; }
   header p { width: auto; max-width: 23em; margin: auto; }
-  .col-1 h2 { margin: 6rem 0 2.5rem !important; width: 12rem; }
+  .col-1 h2 { margin: 2rem 0 2.5rem !important; width: 12rem; }
   #nuestro-respaldo .col-1 h2 { margin: 0 !important; }
-  #contacto .col-1 h2 { margin: 0 !important; }
+  #sobre-nosotros, #servicios-laboratorio {
+    padding: 0.5rem 0;
+    margin-bottom: 1.5rem;
+}
   header img { width: 100% }
 }
 
